add scrypt installation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,16 @@ description = ""
 authors = ["Nedashkovsky <Nedashkovsky@ymail.com>"]
 readme = "README.md"
 
+packages = [
+    { include = "starship"},
+]
+
 [tool.poetry.dependencies]
 python = "^3.10"
 asyncio = "^3.4.3"
 
+[tool.poetry.scripts]
+starship = "starship.main:run_starship"
 
 [build-system]
 requires = ["poetry-core"]
